# varonis

./: .gitignore  LICENSE  README.md  getting_started
.github/workflows/: cicd.yaml  terraform.yaml
app/: Dockerfile  README.md  pyproject.toml
app/src/restaurant_recommender/: database.py  main.py  models.py
pre-tf/: .terraform.lock.hcl  github-actions.tf  outputs.tf  rg.tf  storage.tf
terraform/: access.tf  config.tf  container-app-env.tf  container-app.tf  database.tf  dns.tf  k8s.tf  load-balancer.tf  network.tf  outputs.tf  remote.tf  secrets.tf  storage.tf  variables.tf
terrarform/: access.tf  container-app.tf  database.tf  dns.tf  network.tf  secrets.tf
